# VulScout

./: README.md
vulnscout/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_report.html
vulnscout/tests/: __init__.py  test_crawler.py  test_detectors.py
vulnscout/vulnscout/: config.py  main.py
vulnscout/vulnscout.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vulnscout/vulnscout/core/: engine.py
vulnscout/vulnscout/detectors/: __init__.py  base.py  security_headers.py  sensitive_data.py
vulnscout/vulnscout/detectors/payloads/: xss.txt
vulnscout/vulnscout/reporter/: __init__.py  base.py  html_reporter.py
vulnscout/vulnscout/ui/: server.py
vulnscout/vulnscout/ui/templates/: index.html
