[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscout"
version = "0.1.0"
description = "可扩展的 Web 漏洞扫描器 -- VulnScout"
authors = [
    {name = "VulnScout"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["security", "scanner", "web", "vulnerability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "click>=8.0",
    "httpx>=0.27,<1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "aiofiles>=23.0",
    "python-multipart>=0.0.9",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.24",
]
dev = [
    "vulnscout[test]",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
vulnscout = "vulnscout.main:cli"

[tool.setuptools.packages.find]
include = ["vulnscout*"]

[tool.setuptools.package-data]
"vulnscout" = ["py.typed"]
"vulnscout.detectors" = ["payloads/**/*", "payloads/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
